css/wrapView.css
a {
    text-decoration: none;
}
#container{
    font-family: 'noto_l';
    position: relative;
}

.sub_header{
    width:100%; 
    border-bottom:1px solid #e5e5e5; 
    border-top:1px solid #e5e5e5; 
    height:59px; 
    background-color:#fff; 
    z-index:999;
    position: sticky;
    top: 0;
    left: 0;
}
.sub_header .logo{
    position:absolute; 
    left:270px;
    top:0px; 
    height:60px; 
    width:110px; 
    background:url(/images/menuinfo_images/logo_sub_header.png) 0 50% no-repeat; 
    overflow:hidden; 
    font-size:0; 
    line-height:0; 
    opacity:0
}
.sub_header .top{
    position:absolute;
    right:270px; 
    top:0px; 
    height:32px; 
    padding-top:28px; 
    font-family:'sw_f'; 
    color:#bbbbbb; 
    font-size:13px; 
    opacity:0;
}
.sub_header .top:after{
    content:''; 
    width:12px; 
    height:15px; 
    background:url(/images/menuinfo_images/icon_arr_top.png) 50% 0 no-repeat; 
    display:block; 
    position:absolute; 
    left:0; 
    width:100%; 
    top:18px;
}
.sub_header .sub_loc{
    text-align:center;
}
.sub_header .sub_loc ul{
    overflow:hidden; 
    display:inline-block;
}
.sub_header .sub_loc ul li{
    float:left; 
    position:relative;
    font-family: 'noto_r';
}
.sub_header .sub_loc ul li + li {
    padding-left:24px; 
    margin-left:21px;
}
.sub_header .sub_loc ul li + li:after{
    content:''; 
    width:4px; 
    height:4px; 
    background-color:#dddddd; 
    border-radius:30px; 
    position:absolute; 
    left:0; 
    top:28px;
}
.sub_header .sub_loc ul li:first-child{
    margin-left:0; 
    padding-left:0
}
.sub_header .sub_loc ul li:first-child:after{display:none;}
.sub_header .sub_loc ul li a{
    display:block; 
    line-height:60px; 
    color:#999999; 
    font-size:16px; 
    letter-spacing:-0.08em; 
    position:relative;
}
.sub_header .sub_loc ul li.active a{
    color:#009223;
    font-weight:300;
}
.sub_header .sub_loc ul li.active a:after{
    content:''; 
    position:absolute; 
    left:0; width:100%; 
    height:4px; 
    bottom:0; 
    background-color:#009223
}


.menuView_wrap{
    padding-top: 77px ;
}

.menuView_wrap .menu_header{
    position: relative;
    text-align: center;
    margin: 0 auto;
    width: 1170px;
}
.menuView_wrap .menu_header .prod_category{
    margin-bottom: 15px;
    margin: 0 auto;
}
.menuView_wrap .menu_header .prod_category a{
    display: none;
    text-decoration: none;
    font-family: 'noto_m';
    color: #bbbbbb;
    font-size: 18px;
    letter-spacing: -0.03em;
    margin: 0 12px;
    vertical-align: middle;
}
.menuView_wrap .menu_header .prod_category .active{
    color: #009223;
    display: inline-block !important;
}
.menuView_wrap .menu_header .prod_category #plus_btn{
    display: inline-block;
    background: url(/images/menuinfo_images/etc/icon_category.png) 0 0 no-repeat;
    width: 20px;
    height: 20px;
    border: none;
    margin-left: -10px;
    vertical-align: middle;
    cursor: pointer;
}

.menuView_wrap .menu_header .prod_category #plus_btn:hover{
    background-position:100% 0
}
.menuView_wrap .menu_header .prod_category #plus_btn.open{
    transform: rotate(45deg);
    margin-left: 4px;
}

.menu_header .share1{
    position: absolute;
    right: -40px;
    top: 0;
}
.menu_header .share2{
    position: absolute;
    right: 0;
    top: 50px;
}
.menu_header .share1 a{
    background: url(/images/menuinfo_images/etc/icon_sns.png) no-repeat;
    display: block;
    width: 40px;
    height: 40px;
    margin-bottom: 10px;
}
.menu_header .share2 a{
    background: url(/images/menuinfo_images/etc/icon_sns.png) no-repeat;
    display: block;
    width: 40px;
    height: 40px;
    margin-bottom: 10px;
}
.menu_header .share1 .facebook{
    background-position: 100% 0;
}
.menu_header .share1 .facebook:hover{
    background-position: 0 0;
}
.menu_header .share2 .url{
    background-position: 100% -80px;
}
.menu_header .share2 .url:hover{
    background-position: 0% -80px;
}


.menuView_wrap .menu_header .name{
    color: #292929;
    font-size: 50px;
    padding-bottom: 11px;
    letter-spacing: -0.055em;
}
.menuView_wrap .menu_header ul li{
    display: inline-block;

}

.menuView_wrap .menu_header .eng{
    color: #999999;
    font-size: 16px;
    font-family: 'sw_s';
}


.menuView_wrap .menu_header ul .kcal{
    color: #292929;
    font-size: 16px;
    padding-left: 20px;
    margin-left: 17px;
    position: relative;
    font-family: 'sw_s';
}
.menuView_wrap .menu_header ul .kcal::after{
    content: '';
    position: absolute;
    left: 0;
    top: 4px;
    width: 1px;
    height: 15px;
    background-color: #dddddd;
}
.menu_content {
    overflow: hidden;
    text-align: center;
}
.menu_content a{
    text-decoration: none;
    color: #333;
}

.menu_info{
    width: 1170px;
    margin: 12px auto 0;
    position: relative;
}

.menu_info .menu_img {
    margin: 0 auto;
    width: 570px;
    height: 400px;
}
.menu_info .arr{
    position: absolute;
    top: 170px;
    display: table;
    table-layout: fixed;
}
.menu_info .arr::after{
    content: '';
    position: absolute;
    width: 34px;
    height: 60px;
    background: url(/images/menuinfo_images/etc/icon_arr.png) no-repeat;
}
.menu_info .arr span{
    display: table-cell;
    vertical-align: middle;
    height: 60px;
    line-height: 18px;
    letter-spacing: -0.02em;
    font-weight: bold;
    z-index: 100;
    position: relative;
}

.menu_info .next{
    right: 0;
    text-align: right;
    padding-right: 53px;
}

.menu_info .next img{
    position: absolute;
    width: 370px;
    height: 260px;
    top: -100px;
    right: -300px;
    opacity: 0.5;
}
.menu_info .next:hover img {
    opacity: 1;
}

.menu_info .next::after{
    background-position: 100% 0;
    right: 0;
}
.menu_info .next:hover::after{
    background-position:100% 100%
}

.menu_info .before{
    left: 0;
    text-align: left;
    padding-left: 53px;
}

.menu_info .before::after{
    background-position: 0 0;
    left: 0;
}
/* ... */

